k8s/adguard/adguard-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
spec:
  selector:
    app: adguard-home-depl
  ports:
  - port: 443
    targetPort: 443
  - port: 80
    targetPort: 80
