k8s/adguard/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: traefik-route
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`dns.cscms.me`)
    services:
    - name: adguard-home-service
      port: 443
  tls:
    passthrough: true
